fix overflow issue in dialogs

--- a/src/app/global/styles/_global.scss
+++ b/src/app/global/styles/_global.scss
@@ -181,8 +181,8 @@
 }
 
 .selectContainer .select {
-  position: absolute;
-  margin-top: calc((var(--height) - var(--button-height)) / 2 - var(--padding));
+  position: relative;
+  top: -15px;
 }
 
 .mainBGColor {
