--- a/src/app/whiteboard/dialogs/picker-dialog/picker-dialog.component.scss
+++ b/src/app/whiteboard/dialogs/picker-dialog/picker-dialog.component.scss
@@ -5,3 +5,11 @@
     margin-top: 7px;
     width: 120px;
 }
+
+.settingsWrapper {
+    padding: 7px;
+    max-height: 500px;
+    max-width: 700px;
+    overflow-y: auto;
+    overflow-x: auto;
+}
